# browser

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  FONT_ROADMAP.md  README.md  RESIZE_ROADMAP.md  pl_debug.txt  refactor_roadmap.md  roadmap.md  structure.md  test_roadmap.md  trace_log.txt
async/: channel.hpp  executor.hpp  memory.hpp  mutex.hpp  scoped_lock.hpp  task.hpp  this_thread.hpp  thread_pool.hpp  when_all.hpp  when_any.hpp
browser/: bookmarks.cpp  bookmarks.hpp  browser_window.cpp  browser_window.hpp  devtools.cpp  devtools.hpp  download_manager.cpp  download_manager.hpp  escape.hpp  find_bar.cpp  find_bar.hpp  history.cpp  history.hpp  page_loader.cpp  page_loader.hpp  paths.hpp  perf_counter.cpp  perf_counter.hpp  session.cpp  session.hpp  settings.cpp  settings.hpp  telemetry.cpp  telemetry.hpp  theme.hpp  types.hpp
browser/chrome/: event_handler.cpp  navigator.cpp  page_view.cpp  titlebar.cpp  toolbar.cpp  window.cpp  window.hpp
build_tidy/: compile_commands.json
css/: animation.cpp  animation.hpp  cascade.cpp  cascade.hpp  css_values.cpp  css_values.hpp  grid.cpp  grid.hpp  layout.cpp  layout.hpp  parser.cpp  parser.hpp  selector_match.cpp  selector_match.hpp  specificity.hpp  tokenizer.cpp  tokenizer.hpp  transition.cpp
css/cascade/: engine.cpp  engine.hpp  important.cpp  inheritance.cpp  media.cpp  specificity.cpp
css/layout/: block.cpp  engine.cpp  flex.cpp  grid.cpp  inline.cpp  positioning.cpp  resolve.cpp  table.cpp  type_check.cpp  types.hpp
css/parser/: at_rule.cpp  declaration.cpp  parser.cpp  parser.hpp  property.cpp  selector.cpp
html/: dom.cpp  dom.hpp  entities.cpp  entities.hpp  form_state.cpp  form_state.hpp  form_submission.cpp  form_submission.hpp  hit_test.cpp  hit_test.hpp  parser.cpp  parser.hpp  preload_scanner.cpp  preload_scanner.hpp  resource_loader.cpp  resource_loader.hpp  token.hpp  tokenizer.cpp  tokenizer.hpp  traversal.cpp  traversal.hpp  utf8.cpp  utf8.hpp
html/parser/: adoption_agency.cpp  after_body.cpp  before_html.cpp  body.cpp  foster_parenting.cpp  frameset.cpp  head.cpp  initial.cpp  parser.cpp  parser.hpp  template.cpp
html/tokenizer/: states_data.cpp  states_foreign.cpp  states_rcdata.cpp  states_tag.cpp  tokenizer.cpp  tokenizer.hpp
image/: decoder.cpp  decoder.hpp  decoder_bmp.cpp  decoder_gif.cpp  decoder_jpeg.cpp  decoder_png.cpp  decoder_wic.cpp  format.hpp
js/: ast.hpp  bytecode.hpp  compiler.cpp  compiler.hpp  dom_bindings.cpp  dom_bindings.hpp  gc.cpp  gc.hpp  jit.cpp  jit.hpp  lexer.cpp  lexer.hpp  module_loader.cpp  module_loader.hpp  parser.cpp  parser.hpp  script_runner.cpp  script_runner.hpp  token.hpp  value.hpp  vm.cpp  vm.hpp
js/builtins/: array.cpp  builtins.hpp  console.cpp  date.cpp  error.cpp  json.cpp  math.cpp  number.cpp  object.cpp  performance.cpp  promise.cpp  regexp.cpp  string.cpp  symbol.cpp  timers.cpp
js/dom_bindings/: document.cpp  fetch.cpp  storage.cpp  xhr.cpp
js/parser/: declaration.cpp  expression.cpp  parser.cpp  parser.hpp  pattern.cpp  statement.cpp
js/vm/: builtins.cpp  gc.cpp  gc.hpp  ops.cpp  vm.cpp  vm.hpp
net/: connection.cpp  connection.hpp  cookie_jar.cpp  cookie_jar.hpp  csp.cpp  csp.hpp  deflate.cpp  deflate.hpp  dns.cpp  dns.hpp  hsts.cpp  hsts.hpp  http.cpp  http.hpp  http2.cpp  http2.hpp  http_cache.cpp  http_cache.hpp  http_client.cpp  http_client.hpp  huffman_table.inc  iocp.cpp  iocp.hpp  origin.cpp  origin.hpp  socket.cpp  socket.hpp  socket_win32.cpp  socket_win32.hpp  storage.cpp  storage.hpp  tls.cpp  tls.hpp  tracker_blocker.cpp  tracker_blocker.hpp  url.cpp  url.hpp  websocket.cpp  websocket.hpp
net/crypto/: aes.cpp  aes.hpp  bignum.cpp  bignum.hpp  chacha20.cpp  chacha20.hpp  ecc.cpp  ecc.hpp  poly1305.cpp  poly1305.hpp  sha.cpp  sha.hpp  x25519.cpp  x25519.hpp
net/http2/: connection.cpp  connection.hpp  frames.cpp  hpack.cpp  internal.hpp
net/socket/: socket_win32.hpp  tcp.cpp  types.cpp  types.hpp  udp.cpp
net/tls/: cert_verify.cpp  cert_verify.hpp  cipher.cpp  connection.cpp  connection.hpp  handshake.cpp  record.cpp
platform/: audio.cpp  audio.hpp  opengl.cpp  opengl.hpp  window.cpp  window.hpp  window_win32.cpp  window_win32.hpp
render/: audio_element.cpp  audio_element.hpp  canvas.cpp  canvas.hpp  canvas_bindings.cpp  compositor.cpp  compositor.hpp  embedded_font.cpp  embedded_font.hpp  font.cpp  font.hpp  font_loader.cpp  font_loader.hpp  form_controls.cpp  form_controls.hpp  icons.hpp  layer_tree.cpp  layer_tree.hpp  mathml_stub.cpp  mathml_stub.hpp  mesh.cpp  mesh.hpp  paint.cpp  paint.hpp  paint_executor.cpp  paint_executor.hpp  painter.cpp  painter.hpp  rasterizer.cpp  rasterizer.hpp  renderer.cpp  renderer.hpp  shader_program.cpp  shader_program.hpp  shaders.hpp  svg_renderer.cpp  svg_renderer.hpp  text_renderer.cpp  text_renderer.hpp  texture.cpp  (+5 more)
render/font/: atlas.cpp  atlas.hpp  embedded.cpp  embedded.hpp  emoji.hpp  font.cpp  font.hpp  internal.hpp  rasterizer.cpp  registry.cpp  registry.hpp  shaper.cpp  shaper.hpp  truetype.cpp
render/paint/: commands.hpp  executor.cpp  executor.hpp  gradient.cpp  gradient.hpp  painter.cpp  painter.hpp  shadow.cpp  shadow.hpp
scripts/: gen_font.py  run_all_tests.ps1
src/: main.cpp
tests/: async_test.cpp  bookmark_test.cpp  channel_test.cpp  chrome_test.cpp  compiler_test.cpp  cookie_test.cpp  css_animation_test.cpp  css_test.cpp  dom_bindings_test.cpp  flex_test.cpp  font_test.cpp  gc_test.cpp  gpu_smoke_test.cpp  grid_test.cpp  history_test.cpp  html_test.cpp  http_cache_test.cpp  image_test.cpp  iocp_test.cpp  jit_test.cpp  js_test.cpp  layout_test.cpp  main.cpp  mesh_test.cpp  net_test.cpp  paint_test.cpp  parser_test.cpp  settings_test.cpp  storage_test.cpp  telemetry_test.cpp  test_framework.cpp  test_framework.hpp  test_framework_impl_test.cpp  test_framework_test.cpp  thread_pool_test.cpp  tls_test.cpp  tracker_test.cpp  utility.hpp  utility_test.cpp  vm_test.cpp  (+3 more)
tools/: README.md  dump_glyph.py  json_diff.py  package.json  reference_css.js  reference_html.js  reference_js.js  regenerate_expected.js  run_tests.ps1  run_tests.sh
(+259 files in other folders)
